--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   table_calendar: ^3.1.2
   fl_chart: ^0.66.0
   image_picker: ^1.0.7
+  file_picker: ^8.0.0
+  video_player: ^2.8.0
+  youtube_player_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_test:
